Fixed align issues

--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,8 @@ nav ul li a:hover::after{
 }
 
 p.desc{
-    text-align: justify;
-    line-height: 1.2;
+    text-align: justify !important;
+    line-height: 1.2 !important;
 }
 
 .sub-title{
